[package]
name = "mezzotint"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"
authors = ["Bo Maryniuk <bo@maryniuk.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
clap = { version = "4.3.24", features = [
    "derive",
    "unicode",
    "unstable-styles",
] }
colored = "2.0.4"
exitcode = "1.1.2"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive", "alloc"] }
serde_yaml = "0.9.25"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
