[package]
name = "mezzotint"
version = "0.1.0"
edition = "2021"
rust-version = "1.66.1"
authors = ["Bo Maryniuk <bo@maryniuk.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3.0"
chrono = "0.4.29"
clap = { version = "4.3.24", features = [
    "derive",
    "unicode",
    "unstable-styles",
] }
colored = "2.0.4"
exitcode = "1.1.2"
filesize = "0.2.0"
flate2 = "1.0.30"
log = "0.4.20"
nix = "0.29.0"
serde = { version = "1.0.188", features = ["derive", "alloc"] }
serde_yaml = "0.9.25"
sys-info = "0.9.1"
tar = "0.4.41"
time = "0.3.28"
walkdir = "2.4.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
